KR_Equip_naval_l_english checked

--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-#Need to check - Zankoas
+
 ### General ###
 submarine_pre:0 "Pre-Weltkrieg U-boat"
 submarine_pre_desc:0 "The first U-boats opened a new horizon for naval warfare. These new vessels can break through enemy waters without being detected and wreak havoc on the convoy routes."
@@ -16,7 +16,7 @@ battleship_pre_desc:0 "Considered by some to be a relic of a bygone era of naval
 carrier_pre:0 "Pre-Weltkrieg Carrier"
 carrier_pre_desc:0 "These Escort Carriers and Seaplane Tenders were the predecessors of today’s aircraft carriers."
 
-### JAP - JAPAN ###
+### Japan ###
 JAP_submarine_pre:1 "Kaichu Class"
 JAP_submarine_pre_desc:1 "The Kaichu class U-boats were built after WWI and based on the earlier U-boats. These medium-sized U-boats were adequately armed, possesses good operational range and had good speed for their time, but by 1938 they were somewhat outdated. Altogether 42 Kaichu type U-boats were built for the IJN and the series included 7 variants."
 JAP_submarine_1:1 "Kaidai III Class"
@@ -37,7 +37,7 @@ JAP_carrier_pre:1 "Hosho Class"
 JAP_carrier_pre_desc:1 "Hōshō, literally 'phoenix in flight' was the world's first commissioned ship that was designed and built as an aircraft carrier, and the first aircraft carrier of the Imperial Japanese Navy (IJN). Commissioned in 1922, the ship was used for testing carrier aircraft operations equipment, techniques, such as take-offs and landings, and carrier aircraft operational methods and tactics. The ship provided valuable lessons and experience for the IJN in early carrier air operations. Hōshō's superstructure and other obstructions to the flight deck were removed in 1924 on the advice of experienced aircrews."
 JAP_carrier_1_desc:1 "The aircraft carrier Kaga was one of Japan's first fleet carriers. She was originally a battleship, but finished as an aircraft carrier. This resulted in a large and heavily armoured carrier with limited space for improvement. However, it was an important experience in aircraft carrier construction for the Imperial Japanese Navy."
 
-### RUS - Russia ###
+### Russia ###
 
 RUS_destroyer_pre:0 "Novik Class"
 RUS_destroyer_1:0 "Orfey Class"
@@ -104,7 +104,7 @@ RUS_submarine_3_desc:0 "The Series XIV submarines are large cruising submarines 
 RUS_submarine_4:0 "Series XXV Kosatka"
 RUS_submarine_4_desc:0 "The Series XXV submarines, are the development of the previous cruising submarines projects, created for Russian Navy. Their design is heavily influenced by the German Type XXI submarines, and they are meant to replace the older Series XIV boats. They are large, ocean-going submarines with a heavy torpedo armament and long range."
 
-### OTT – Ottoman Empire ###
+### Ottoman Empire ###
 
 OTT_battle_cruiser_pre:1 "Yavuz Class"
 OTT_battle_cruiser_pre_desc:1 "The Yavuz-class is a licenced copy of the German Moltke-class battlecruisers. During the Weltkrieg, the Moltke-class SMS Goeben was transferred to the Ottoman Navy and renamed the Yavuz Sultan Selim, effectively founding the class. After the war, the Ottomans purchased a licence to produce additional Yavuz-class battlecruisers.
@@ -218,7 +218,7 @@ OTT_heavy_cruiser_4:1 "Giray Class"
 OTT_heavy_cruiser_4_desc:1 "The Giray-class does away with its predecessor's undesirable turret arrangement and instead uses three triple 21cm turrets to provide similar weight of fire in a more convenient manner. The addition of two of the new twin 150mm dual-purpose turrets significantly improve its anti-air firepower."
 
 ### Ireland ###
-### Submarines ###
+
 IRE_submarine_1:0 "Holland Class"
 IRE_submarine_1_desc:0 "Named after the Irish engineer who developed the first U-boat formally commissioned by the U.S Navy, the Holland Class is an early Irish attempt into the secretive world of U-boat warfare. It had numerous issues and saw very little actual service, but proved a useful platform to build on for future members of the U-boat family."
 IRE_submarine_2:0 "Wolfhound Class"
@@ -228,19 +228,16 @@ IRE_submarine_3_desc:0 "A latter expansion upon the design of the Wolfhound, the
 IRE_submarine_4:0 "Kelpie Class"
 IRE_submarine_4_desc:0 "The most advanced U-boat of its kind during WK2, the Kelpie was a joint venture between German and Irish engineers, and had a much longer range than the previous designs, which were typically deployed in the Irish Sea and the Atlantic. The Kelpie could reach far further shores, and could conduct long-range trade warfare that posed a major threat to the Entente powers in particular."
 
-### Destroyers ###
 IRE_destroyer_1:0 "Clare Class"
 IRE_destroyer_2:0 "Cork Class"
 IRE_destroyer_3:0 "Kerry Class"
 IRE_destroyer_4:0 "Waterford Class"
 
-### Cruisers ###
 IRE_light_cruiser_1:0 "Galway Class"
 IRE_light_cruiser_2:0 "Sligo Class"
 IRE_light_cruiser_3:0 "Castlebar Class"
 IRE_light_cruiser_4:0 "Barna Class"
 
-### Heavy Cruisers ###
 IRE_heavy_cruiser_1:0 "Lisburn Class"
 IRE_heavy_cruiser_2:0 "Belfast Class"
 IRE_heavy_cruiser_3:0 "Derry Class"
@@ -248,27 +245,23 @@ IRE_heavy_cruiser_4:0 "Bangor City Class"
 IRE_battle_cruiser_1:0 "Newry Class"
 IRE_battle_cruiser_2:0 "Antrim Class"
 
-### Battle Ships ###
 IRE_battleship_1:0 "Dagda Class"
 IRE_battleship_2:0 "Arawn Class"
 IRE_battleship_3:0 "Lir Class"
 IRE_battleship_4:0 "Ogma Class"
 
-### Carriers ###
 IRE_carrier_1:0 "Medb Class"
 IRE_carrier_2:0 "Scathach Class"
 IRE_carrier_3:0 "Andraste Class"
 IRE_carrier_4:0 "Macha Class"
 
-### SH Battleships ###
 IRE_SH_battleship_1:0 "Balor Class"
 IRE_SH_battleship_1_desc:0 "Named after the mythological Irish demon king, the Balor class of super-heavy battleship is a formidable monster of a ship that will no doubt help to secure supremacy of the Irish Sea if properly supported by a fleet of screens."
 IRE_SH_battleship_2:0 "Bánánach Class"
 IRE_SH_battleship_2_desc:0 "Bigger, badder, and even more expensive to produce than the Balor, the Bánánach boasts a main armament of 12 x 18"/50 calibre guns to offer almost unmatched firepower relative to other Irish designs."
 
-### SWE - Sweden ###
+### Sweden ###
 
-### Light Ships ###
 SWE_submarine_1:0 "Hajen Class"
 SWE_submarine_1_desc:0 "The Hajen, Bävern, Valen classes were a series of small to medium-sized U-boats built for the Swedish Navy during the 1920s. The Hajen class, commissioned in 1920, had U-boats that displaced nearly 400 tons and were armed with four 450mm torpedo tubes. They had a diving depth of only 30m."
 
@@ -279,7 +272,7 @@ SWE_submarine_3:0 "U Class"
 SWE_submarine_3_desc:0 "The Swedish U-class U-boats were a class of nine subs commissioned between 1942 and 1944. They were fairly small and relatively slow, displacing only 370 tons. They were armed with four 533mm torpedo tubes."
 
 SWE_submarine_4:0 "Neptun Class"
-SWE_submarine_4_desc:0 "The Neptun class consisted of three medium-sized U-boats that were all commissioned in 1943. They were used primarily for minelaying duties. They displaced 550 tons and were armed with five 533mm torpedo tubes."
+SWE_submarine_4_desc:0 "The Neptun class consisted of three medium-sized U-boats that were all commissioned in 1943. They were used primarily for mine laying duties. They displaced 550 tons and were armed with five 533mm torpedo tubes."
 
 SWE_destroyer_1:0 "Ehrensköld Class"
 SWE_destroyer_1_desc:0 "The two destroyers of the Ehrensköld class were completed in 1927, as the first modern destroyers for Sweden following World War I. They displaced just over 970 tons and were armed with three 120mm/44 K/45 guns and six 533mm torpedo tubes. They had a short range but good speed."
