Localisation fixes thanks to Chaos_TLW

--- a/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -384,9 +384,9 @@ BEL_infantry_equipment_4_short:0 "SAFN-49"
 #######Focus names from "The Belgian Lion Roars Again" (too many texts put in intentionally, also descriptions are too historical -> adapt to KR) #########
 
 BEL_linguistic_question_in_military:0 "Linguistic Military Question"
-BEL_linguistic_question_in_military_desc:0 "For years the Flemish movement wants to split the army on linguistical bases, arguing that the Flemish soldiers can't understand the orders given in French."
+BEL_linguistic_question_in_military_desc:0 "For years the Flemish movement wants to split the army on linguistic bases, arguing that the Flemish soldiers can't understand the orders given in French."
 BEL_army_linguistic_divide:0 "Linguistic Division of the Army "
-BEL_army_linguistic_divide_desc:0 "For years the Flemish movement wants to split the army on linguistical bases, arguing that the Flemish soldiers can't understand the orders given in French. It is now time to implement changes in the army structure in order to have only French and Flemish speaking divisions." 
+BEL_army_linguistic_divide_desc:0 "For years the Flemish movement wants to split the army on linguistic bases, arguing that the Flemish soldiers can't understand the orders given in French. It is now time to implement changes in the army structure in order to have only French and Flemish speaking divisions." 
 BEL_depillarize_the_belgians:0 "Depillarize The Belgian Society"
 BEL_depillarize_the_belgians_desc:0 "The rigidity of our current pillarized society is an obstacle to the revolution and the better future that comes with it." 
 BEL_choose_Rex:0 "Choose Rex"
