--- a/localisation/KR_Netherlands_l_english.yml
+++ b/localisation/KR_Netherlands_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
 ### Ideas ###
-HOL_mech_troops:0 "Mechanized Infantry"
-HOL_mech_troops_desc:0 "Mechanized infantry is the future!"
+HOL_mech_troops:0 "Mechanised Infantry"
+HOL_mech_troops_desc:0 "Mechanised infantry is the future!"
 HOL_korps_mariniers:0 "Korps Mariniers"
 HOL_korps_mariniers_desc:0 "The Korps Mariniers consists of some of the finest marine troops in the world."
 HOL_syndie:0 "Dutch Syndicalism"
@@ -45,15 +45,15 @@ HOL_electronics_research_desc:0 "With our investments in the electronics field, 
 HOL_air_base:0 "Expand Schiphol"
 HOL_air_base_desc:0 "We need to expand our national airport in order to sustain our economy and improve our links to our colonies."
 HOL_invest_fokker:0 "Fokker Airplanes for KLM"
-HOL_invest_fokker_desc:0 "Fokker has proposed to design a new airplane for use by the KLM. We should take up his offer so he can expand his operations, allowing our air force to get domnestically built planes later on."
+HOL_invest_fokker_desc:0 "Fokker has proposed to design a new airplane for use by the KLM. We should take up his offer so he can expand his operations, allowing our air force to get domestically built planes later on."
 HOL_dutch_steel:0 "Search For Resources"
 HOL_dutch_steel_desc:0 "Although our country is not very resource rich, we should be able to find some iron deposits in the south of the country."
 HOL_royal_shell:0 "Invest in Royal Dutch Shell"
-HOL_royal_shell_desc:0 "Shell has proposed a plan to build an oil refinery on Curaçao. Being close to Venezuelan crude oil reserves, this can prove very beneficial for both the Dutch Carribiean and the Dutch economy."
+HOL_royal_shell_desc:0 "Shell has proposed a plan to build an oil refinery on Curaçao. Being close to Venezuelan crude oil reserves, this can prove very beneficial for both the Dutch Caribbean and the Dutch economy."
 HOL_west_indies_resources:0 "Increase Production in Dutch Guyana"
 HOL_west_indies_resources_desc:0 "Due to its low population, aluminium excavation is already at its peak in Dutch Guyana. By promoting workers to work in the West, we can boost production considerably."
 HOL_maritime_colonial:0 "East Indies Maritime Expansion"
-HOL_maritime_colonial_desc:0 "Most of our fleet is based in the Dutch East Indies, but the facilities to repair and maintain our fleet there are limited. We need to expand those facilities so we can maintain a constant naval presance there."
+HOL_maritime_colonial_desc:0 "Most of our fleet is based in the Dutch East Indies, but the facilities to repair and maintain our fleet there are limited. We need to expand those facilities so we can maintain a constant naval presence there."
 HOL_colonial_resources:0 "East Indies Resources Excavate"
 HOL_extra_research_slot:0 "Extra Research Slot"
 HOL_dutch_scientists:0 "Dutch Scientists"
@@ -82,9 +82,9 @@ HOL_sea_forts_desc:0 "As a nation with a long and rich history of seafaring, we 
 HOL_light_cruiser_focus:0 "Eendracht Class Light Cruiser"
 HOL_light_cruiser_focus_desc:0 "Further improve upon our already existing light cruiser designs based upon the experience gained by building the Java class light cruisers. These cruisers will remain having their focus on speed, acting as flotilla leaders for our destroyers for instance."
 HOL_heavy_cruiser_focus:0 "Work on Heavy Cruisers"
-HOL_heavy_cruiser_focus_desc:0 "Building larger cruisers enables them to provide better fire support for our capital ships, or alternatively act as independant convoy raiding ships or as fast intervention ships before our main fleet can arrive."
+HOL_heavy_cruiser_focus_desc:0 "Building larger cruisers enables them to provide better fire support for our capital ships, or alternatively act as independent convoy raiding ships or as fast intervention ships before our main fleet can arrive."
 HOL_submarine_focus:0 "O-19 class Submarines"
-HOL_submarine_focus_desc:0 "Further refinement to our already excellent submarine designs will allow us to keep an edge over our potential advisaries."
+HOL_submarine_focus_desc:0 "Further refinement to our already excellent submarine designs will allow us to keep an edge over our potential advisories."
 HOL_dutch_airforce:0 "The Dutch Airforce"
 HOL_fighter_effort:0 "Fokker Fighters"
 HOL_bomber_focus:0 "Tactical Bombers Effort"
@@ -97,11 +97,11 @@ HOL_land_doctrine_desc:0 "While we have not participated a grand war in Europe s
 HOL_infantry_focus:0 "The Basic Needs"
 HOL_infantry_focus_desc:0 "A crucial focus for any army is equipping their soldiers, and we are no exception. Updating our small arms may be expensive, but we cannot allow ourselves to fall behind in this crucial area."
 HOL_artillery_focus:0 "Artillery Effort"
-HOL_artillery_focus_desc:0 "If the Weltkrieg proved anything, it’s that Napoleon was right - God is with those with the best artillery. We should endeavor to be this side."
+HOL_artillery_focus_desc:0 "If the Weltkrieg proved anything, it’s that Napoleon was right - God is with those with the best artillery. We should endeavour to be this side."
 HOL_legionary_motorization:0 "Gemotoriseerde Infanterie"
 HOL_legionary_motorization_desc:0 "A major problem in the Weltkrieg identified by our generals was the general slow speed of infantry in exploiting a breakthrough. Using trucks as transport should help immensely with this."
 HOL_mech_infantry:0 "Gemechaniseerde Infanterie"
-HOL_mech_infantry_desc:0 "Even motorized, our infantry is still vulnerable to shrapnel and small arms fire. Armored cars and halftracks promise to allow our men the protection they need to not only exploit breakthroughs, but create them as well."
+HOL_mech_infantry_desc:0 "Even motorised, our infantry is still vulnerable to shrapnel and small arms fire. Armoured cars and halftracks promise to allow our men the protection they need to not only exploit breakthroughs, but create them as well."
 HOL_tank_research:0 "Focus on Pantsers"
 HOL_tank_research_desc:0 "Tanks proved to be an effective weapon on the Western Front. While we have the option of simply buying German equipment, there may need for us to develop our own models to meet our specific needs regarding the East Indies."
 HOL_marine_troops:0 "Korps Mariniers"
@@ -167,7 +167,7 @@ hol.7.d:0 "A Socialist rally outside Zwolle was met by local police, who moved t
 hol.7.a:0 "We shall stand fast!"
 hol.7.b:0 "Blood has been spilled, we must give in to the SDAP"
 hol.8.t:0 "The Plan for Labour"
-hol.8.d:0 "Now that the SDAP is in power, after being denied for twenty years by various right-wing coalitions, it can begin to implement its Plan for Labour, created after Black Monday to improve economic conditions. The Plan for Labour includes ideas to increase employment, nationalise vital industries, and implementing a system of unemployment benefits, by devaluating the Gilder and allowing the national debt to rise, alongside other more extreme methods."
+hol.8.d:0 "Now that the SDAP is in power, after being denied for twenty years by various right-wing coalitions, it can begin to implement its Plan for Labour, created after Black Monday to improve economic conditions. The Plan for Labour includes ideas to increase employment, nationalise vital industries, and implementing a system of unemployment benefits, by devaluing the Gilder and allowing the national debt to rise, alongside other more extreme methods."
 hol.8.a:0 "We've waited a long time for this day"
 hol.9.t:0 "Syndicalist forces in the Netherlands"
 hol.9.d:0 "Labour strikes, and brutal crackdowns by the police, have fostered the growth of a large revolutionary movement in the Netherlands. If we give them support in the form of training and equipment, they may be able to overthrow the government."
@@ -186,10 +186,10 @@ hol.12.d:0 "Events in the Netherlands have reached the boiling point, and social
 hol.12.a:0 "The government falls!"
 hol.12.b:0 "The Socialists are crushed!"
 hol.13.t:0 "Syndicalist Takeover in The Netherlands!"
-hol.13.d:0 "Events in the Netherlands have reached the boiling point, and socialists have stormed the capital with French and British equipment and volunteers! The faith of the Royal Dutch Family is yet unknown, as rumors say they intend to escape to the loyalist Dutch East Indies."
+hol.13.d:0 "Events in the Netherlands have reached the boiling point, and socialists have stormed the capital with French and British equipment and volunteers! The fate of the Royal Dutch Family is yet unknown, as rumours say they intend to escape to the loyalist Dutch East Indies."
 hol.13.a:0 "Curse them!"
 hol.14.t:0 "Syndicalist Takeover in The Netherlands!"
-hol.14.d:0 "Events in the Netherlands have reached the boiling point, and socialists have stormed the capital with French and British equipment and volunteers! The faith of the Royal Dutch Family is yet unknown, as rumors say they intend to escape to the loyalist Dutch East Indies."
+hol.14.d:0 "Events in the Netherlands have reached the boiling point, and socialists have stormed the capital with French and British equipment and volunteers! The fate of the Royal Dutch Family is yet unknown, as rumours say they intend to escape to the loyalist Dutch East Indies."
 hol.14.a:0 "Glory to the Proleteriat!"
 hol.15.t:0 "Fate of the Royal Family"
 hol.15.d:0 "Following the successful takeover of the Netherlands by Syndicalist militias together with parts of the armed forces, Royal family used the ensuing chaos to avoid capture. We have received info that they are planning to escape to the remaining parts of the Dutch colonial empire to lead their fight against us from there. Our militia together with parts of army plans to capture them before they flee from the Netherlands."
