Travancore, Mysore and temporary Swedish ministers now in. Ugh, those Swedes are a pain

--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -20157,6 +20157,62 @@
 	 Zaharije_Ostojic_dead:0 " is incapable of holding this post."
 
   ################################################################################################################################################################################################
+  ### MYS
+  ################################################################################################################################################################################################
+
+	### Head of Government ###
+	 MYS_AR_Krishnashastry_hog_sde:0 "A.R. Krishnashastry"
+	 AR_Krishnashastry_dead:0 " is incapable of holding this post."
+	 MYS_M_A_Sreenivasan_hog_sli:0 "M. A. Sreenivasan"
+	 M_A_Sreenivasan_dead:0 " is incapable of holding this post."
+	 MYS_Mirza_Muhammad_Ismail_hog_sco:0 "Mirza Muhammad Ismail"
+	 Mirza_Muhammad_Ismail_dead:0 " is incapable of holding this post."
+
+	### Foreign Minister ###
+	 MYS_Joachim_Alva_for_sde:0 "Joachim Alva"
+	 Joachim_Alva_dead:0 " is incapable of holding this post."
+	 MYS_Albion_Rajkumar_Banerjee_for_sco:0 "Albion Rajkumar Banerjee"
+	 Albion_Rajkumar_Banerjee_dead:0 " is incapable of holding this post."
+
+	### Economy Minister ###
+	 MYS_Navaratna_Rama_Rao_eco_sde:0 "Navaratna Rama Rao"
+	 Navaratna_Rama_Rao_dead:0 " is incapable of holding this post."
+	 MYS_Mokshagundam_Visveswaraiah_eco_sco:0 "Mokshagundam Visveswaraiah"
+	 Mokshagundam_Visveswaraiah_dead:0 " is incapable of holding this post."
+
+	### Security Minister ###
+	 MYS_Sannappa_Parameshwar_Gaonkar_sec_sde:0 "Sannappa Parameshwar Gaonkar"
+	 Sannappa_Parameshwar_Gaonkar_dead:0 " is incapable of holding this post."
+	 MYS_PR_Ramaiya_sec_sli:0 "P.R. Ramaiya"
+	 PR_Ramaiya_dead:0 " is incapable of holding this post."
+	 MYS_Albion_Rajkumar_Banerjee_sec_sco:0 "Albion Rajkumar Banerjee"
+	 Albion_Rajkumar_Banerjee_dead:0 " is incapable of holding this post."
+
+	### Intelligence Minister ###
+	 MYS_H_R_Janardhana_Iyengar_int_sco:0 "H. R. Janardhana Iyengar"
+	 H_R_Janardhana_Iyengar_dead:0 " is incapable of holding this post."
+
+	### Military High Command ###
+	 MYS_Mailara_Mahadevappa_mhc_syn:0 "Mailara Mahadevappa"
+	 Mailara_Mahadevappa_dead:0 " is incapable of holding this post."
+	 MYS_Kanteerava_Narasimharaja_Wadiyar_mhc_sco:0 "Kanteerava Narasimharaja Wadiyar"
+	 Kanteerava_Narasimharaja_Wadiyar_dead:0 " is incapable of holding this post."
+
+	### Chief of Army ###
+	 MYS_Mailara_Mahadevappa_carm_syn:0 "Mailara Mahadevappa"
+	 Mailara_Mahadevappa_dead:0 " is incapable of holding this post."
+	 MYS_Krishna_Raja_Wadiyar_IV_carm_sco:0 "Krishna Raja Wadiyar IV"
+	 Krishna_Raja_Wadiyar_IV_dead:0 " is incapable of holding this post."
+
+	### Chief of Navy ###
+	 MYS_PR_Ramaiya_cnav_sli:0 "P.R. Ramaiya"
+	 PR_Ramaiya_dead:0 " is incapable of holding this post."
+
+	### Chief of Air Force ###
+	 MYS_Aspy_Merwan_Engineer_cair_sco:0 "Aspy Merwan Engineer"
+	 Aspy_Merwan_Engineer_dead:0 " is incapable of holding this post."
+
+  ################################################################################################################################################################################################
   ### NEE
   ################################################################################################################################################################################################
 
@@ -27433,14 +27489,16 @@
   ################################################################################################################################################################################################
 
 	### Head of Government ###
+	 SWE_Nils_Flyg_hog_tot:0 "Nils Flyg"
+	 Nils_Flyg_dead:0 " is incapable of holding this post."
 	 SWE_Sven_Linderot_hog_tot:0 "Sven Linderot"
 	 Sven_Linderot_dead:0 " is incapable of holding this post."
 	 SWE_Frans_Severin_hog_syn:0 "Frans Severin"
 	 Frans_Severin_dead:0 " is incapable of holding this post."
 	 SWE_Karl_Kilbom_hog_rso:0 "Karl Kilbom"
 	 Karl_Kilbom_dead:0 " is incapable of holding this post."
-	 SWE_Osten_Unden_hog_rso:0 "Osten Unden"
-	 Osten_Unden_dead:0 " is incapable of holding this post."
+	 SWE_Oesten_Unden_hog_rso:0 "Östen Undén"
+	 Oesten_Unden_dead:0 " is incapable of holding this post."
 	 SWE_Per_Albin_Hansson_hog_sde:0 "Per Albin Hansson"
 	 Per_Albin_Hansson_dead:0 " is incapable of holding this post."
 	 SWE_Axel_Pehrsson_Bramstorp_hog_sli:0 "Axel Pehrsson Bramstorp"
@@ -27459,60 +27517,52 @@
 	 Martin_Ekstroem_dead:0 " is incapable of holding this post."
 
 	### Foreign Minister ###
-	 SWE_Hugo_Sellen_for_tot:0 "Hugo Sellén"
-	 Hugo_Sellen_dead:0 " is incapable of holding this post."
-	 SWE_Oesten_Unden_for_rso:0 "Östen Undén"
-	 Oesten_Unden_dead:0 " is incapable of holding this post."
-	 SWE_Per_Edvin_Skoeld_for_sde:0 "Per Edvin Sköld"
-	 Per_Edvin_Skoeld_dead:0 " is incapable of holding this post."
+	 SWE_Karl_Gustaf_Westman_for_sli:0 "Karl Gustaf Westman"
+	 Karl_Gustaf_Westman_dead:0 " is incapable of holding this post."
+	 SWE_Hilding_Hagberg_for_tot:0 "Hilding Hagberg"
+	 Hilding_Hagberg_dead:0 " is incapable of holding this post."
+	 SWE_Albert_Jensen_for_syn:0 "Albert Jensen"
+	 Albert_Jensen_dead:0 " is incapable of holding this post."
+	 SWE_Fredrik_Stroem_for_rso:0 "Fredrik Ström"
+	 Fredrik_Stroem_dead:0 " is incapable of holding this post."
+	 SWE_Erik_Palmstierna_for_sde:0 "Erik Palmstierna"
+	 Erik_Palmstierna_dead:0 " is incapable of holding this post."
 	 SWE_Richard_Sandler_for_sde:0 "Richard Sandler"
 	 Richard_Sandler_dead:0 " is incapable of holding this post."
-	 SWE_Axel_Pehrsson_Bramstorp_for_sli:0 "Axel Pehrsson Bramstorp"
-	 Axel_Pehrsson_Bramstorp_dead:0 " is incapable of holding this post."
-	 SWE_Karl_G_Westman_for_sli:0 "Karl G. Westman"
-	 Karl_G_Westman_dead:0 " is incapable of holding this post."
-	 SWE_Per_EG_Insulander_for_sli:0 "Per E.G. Insulander"
-	 Per_EG_Insulander_dead:0 " is incapable of holding this post."
-	 SWE_R_Reson_Sohlmann_for_sli:0 "R. Reson Sohlmann"
-	 R_Reson_Sohlmann_dead:0 " is incapable of holding this post."
-	 SWE_Vilhelm_Goeran_Lundvik_for_sli:0 "Vilhelm Göran Lundvik"
-	 Vilhelm_Goeran_Lundvik_dead:0 " is incapable of holding this post."
 	 SWE_Christian_Guenther_for_sco:0 "Christian Günther"
 	 Christian_Guenther_dead:0 " is incapable of holding this post."
-	 SWE_Georg_Andren_for_sco:0 "Georg Andrén"
-	 Georg_Andren_dead:0 " is incapable of holding this post."
+	 SWE_Gustaf_Andersson_i_Rasjoen_for_mli:0 "Gustaf Andersson i Rasjön"
+	 Gustaf_Andersson_i_Rasjoen_dead:0 " is incapable of holding this post."
+	 SWE_Harald_Malmberg_for_ade:0 "Harald Malmberg"
+	 Harald_Malmberg_dead:0 " is incapable of holding this post."
+	 SWE_Carl_August_Ehrensvard_for_pau:0 "Carl August Ehrensvard"
+	 Carl_August_Ehrensvard_dead:0 " is incapable of holding this post."
 	 SWE_Erik_von_Rosen_for_npo:0 "Erik von Rosen"
 	 Erik_von_Rosen_dead:0 " is incapable of holding this post."
 
 	### Economy Minister ###
-	 SWE_Hilding_Hagberg_eco_tot:0 "Hilding Hagberg"
-	 Hilding_Hagberg_dead:0 " is incapable of holding this post."
-	 SWE_Oesten_Unden_eco_rso:0 "Östen Undén"
-	 Oesten_Unden_dead:0 " is incapable of holding this post."
-	 SWE_Erik_Palmstierna_eco_sde:0 "Erik Palmstierna"
-	 Erik_Palmstierna_dead:0 " is incapable of holding this post."
-	 SWE_Ernst_Wigforss_eco_sde:0 "Ernst Wigforss"
-	 Ernst_Wigforss_dead:0 " is incapable of holding this post."
-	 SWE_Gustav_Moeller_eco_sde:0 "Gustav Möller"
-	 Gustav_Moeller_dead:0 " is incapable of holding this post."
-	 SWE_Bertil_Ohlin_eco_sli:0 "Bertil Ohlin"
-	 Bertil_Ohlin_dead:0 " is incapable of holding this post."
-	 SWE_Vilmar_Ljungdahl_eco_sli:0 "Vilmar Ljungdahl"
-	 Vilmar_Ljungdahl_dead:0 " is incapable of holding this post."
-	 SWE_Erik_Einar_Ekstrand_eco_mli:0 "Erik Einar Ekstrand"
-	 Erik_Einar_Ekstrand_dead:0 " is incapable of holding this post."
+	 SWE_Sven_Linderot_eco_tot:0 "Sven Linderot"
+	 Sven_Linderot_dead:0 " is incapable of holding this post."
+	 SWE_Gustav_Sjoestroem_eco_syn:0 "Gustav Sjöström"
+	 Gustav_Sjoestroem_dead:0 " is incapable of holding this post."
+	 SWE_Anna_Johansson_Visborg_eco_rso:0 "Anna Johansson Visborg"
+	 Anna_Johansson_Visborg_dead:0 " is incapable of holding this post."
+	 SWE_Per_Edvin_Skold_eco_sde:0 "Per Edvin Skold"
+	 Per_Edvin_Skold_dead:0 " is incapable of holding this post."
+	 SWE_Per_Ernst_Wigforss_eco_sde:0 "Per Ernst Wigforss"
+	 Per_Ernst_Wigforss_dead:0 " is incapable of holding this post."
+	 SWE_Arthur_Heiding_eco_sli:0 "Arthur Heiding"
+	 Arthur_Heiding_dead:0 " is incapable of holding this post."
 	 SWE_Ernst_Trygger_eco_mli:0 "Ernst Trygger"
 	 Ernst_Trygger_dead:0 " is incapable of holding this post."
-	 SWE_Fritjof_Domoe_eco_mli:0 "Fritjof Domö"
-	 Fritjof_Domoe_dead:0 " is incapable of holding this post."
-	 SWE_Goesta_Bagge_eco_mli:0 "Gösta Bagge"
-	 Goesta_Bagge_dead:0 " is incapable of holding this post."
 	 SWE_Gustav_Cassel_eco_mli:0 "Gustav Cassel"
 	 Gustav_Cassel_dead:0 " is incapable of holding this post."
-	 SWE_Martin_Skoglund_eco_mli:0 "Martin Skoglund"
-	 Martin_Skoglund_dead:0 " is incapable of holding this post."
-	 SWE_Arthur_Linden_eco_npo:0 "Arthur Lindén"
+	 SWE_Arthur_Linden_eco_sco:0 "Arthur Lindén"
 	 Arthur_Linden_dead:0 " is incapable of holding this post."
+	 SWE_Marcus_Wallenberg_eco_pau:0 "Marcus Wallenberg"
+	 Marcus_Wallenberg_dead:0 " is incapable of holding this post."
+	 SWE_Fritiof_Domoe_eco_npo:0 "Fritiof Domö"
+	 Fritiof_Domoe_dead:0 " is incapable of holding this post."
 
 	### Security Minister ###
 	 SWE_Karl_Kilbom_sec_syn:0 "Karl Kilbom"
@@ -27539,41 +27589,41 @@
 	 Sven_Hedin_dead:0 " is incapable of holding this post."
 
 	### Intelligence Minister ###
-	 SWE_CH_Hermansson_int_tot:0 "C.H. Hermansson"
-	 CH_Hermansson_dead:0 " is incapable of holding this post."
-	 SWE_Aake_Hammerskioeld_int_sli:0 "Åke Hammerskiöld"
-	 Aake_Hammerskioeld_dead:0 " is incapable of holding this post."
-	 SWE_Carlos_Adlercreutz_int_sco:0 "Carlos Adlercreutz"
+	 SWE_Gustav_Johansson_int_tot:0 "Gustav Johansson"
+	 Gustav_Johansson_dead:0 " is incapable of holding this post."
+	 SWE_Nisse_Latt_int_syn:0 "Nisse Latt"
+	 Nisse_Latt_dead:0 " is incapable of holding this post."
+	 SWE_August_Spngberg_int_rso:0 "August Spångberg"
+	 August_Spngberg_dead:0 " is incapable of holding this post."
+	 SWE_Gustaf_Moeller_int_sde:0 "Gustaf Möller"
+	 Gustaf_Moeller_dead:0 " is incapable of holding this post."
+	 SWE_Harry_'Revolver_Harry'_Sodermann_int_sde:0 "Harry 'Revolver Harry' Sodermann"
+	 Harry_'Revolver_Harry'_Sodermann_dead:0 " is incapable of holding this post."
+	 SWE_Janne_Nilsson_int_sli:0 "Janne Nilsson"
+	 Janne_Nilsson_dead:0 " is incapable of holding this post."
+	 SWE_Thorwald_Bergquist_int_mli:0 "Thorwald Bergquist"
+	 Thorwald_Bergquist_dead:0 " is incapable of holding this post."
+	 SWE_Georg_Andren_int_sco:0 "Georg Andrén"
+	 Georg_Andren_dead:0 " is incapable of holding this post."
+	 SWE_Carlos_Adlercreutz_int_ade:0 "Carlos Adlercreutz"
 	 Carlos_Adlercreutz_dead:0 " is incapable of holding this post."
-	 SWE_Erik_Palmstierna_int_sco:0 "Erik Palmstierna"
-	 Erik_Palmstierna_dead:0 " is incapable of holding this post."
-	 SWE_Helge_Jung_int_sco:0 "Helge Jung"
-	 Helge_Jung_dead:0 " is incapable of holding this post."
-	 SWE_Hermann_Nilsson_Ehle_int_npo:0 "Hermann Nilsson Ehle"
-	 Hermann_Nilsson_Ehle_dead:0 " is incapable of holding this post."
+	 SWE_Archibald_Douglas_int_pau:0 "Archibald Douglas"
+	 Archibald_Douglas_dead:0 " is incapable of holding this post."
+	 SWE_Per_Engdahl_int_npo:0 "Per Engdahl"
+	 Per_Engdahl_dead:0 " is incapable of holding this post."
 
 	### Military High Command ###
-	 SWE_Gunnar_Johansson_mhc_tot:0 "Gunnar Johansson"
-	 Gunnar_Johansson_dead:0 " is incapable of holding this post."
-	 SWE_Axel_Bredberg_mhc_mli:0 "Axel Bredberg"
-	 Axel_Bredberg_dead:0 " is incapable of holding this post."
 	 SWE_Ernst_af_Klercker_mhc_mli:0 "Ernst af Klercker"
 	 Ernst_af_Klercker_dead:0 " is incapable of holding this post."
-	 SWE_Nils_Swedlund_mhc_mli:0 "Nils Swedlund"
-	 Nils_Swedlund_dead:0 " is incapable of holding this post."
-	 SWE_Samuel_Aakerhielm_mhc_mli:0 "Samuel Åkerhielm"
-	 Samuel_Aakerhielm_dead:0 " is incapable of holding this post."
 	 SWE_Axel_Rappe_mhc_sco:0 "Axel Rappe"
 	 Axel_Rappe_dead:0 " is incapable of holding this post."
-	 SWE_Carl_Gustav_Ehrensvaerd_mhc_sco:0 "Carl Gustav Ehrensvärd"
-	 Carl_Gustav_Ehrensvaerd_dead:0 " is incapable of holding this post."
-	 SWE_Carl_Gustav_Ehrensvaerd_mhc_sco:0 "Carl Gustav Ehrensvärd"
-	 Carl_Gustav_Ehrensvaerd_dead:0 " is incapable of holding this post."
+	 SWE_Carl_August_Ehrensvaerd_mhc_sco:0 "Carl August Ehrensvärd"
+	 Carl_August_Ehrensvaerd_dead:0 " is incapable of holding this post."
 	 SWE_Olof_Thoernell_mhc_sco:0 "Olof Thörnell"
 	 Olof_Thoernell_dead:0 " is incapable of holding this post."
 	 SWE_Oscar_Nygren_mhc_sco:0 "Oscar Nygren"
 	 Oscar_Nygren_dead:0 " is incapable of holding this post."
-	 SWE_Per_Sylvan_mhc_sco:0 "Per Sylvan"
+	 SWE_Per_Sylvan_mhc_mli:0 "Per Sylvan"
 	 Per_Sylvan_dead:0 " is incapable of holding this post."
 	 SWE_Martin_Ekstroem_mhc_npo:0 "Martin Ekström"
 	 Martin_Ekstroem_dead:0 " is incapable of holding this post."
@@ -28767,6 +28817,78 @@
 	 Sergey_Boyno_Rodzevich_dead:0 " is incapable of holding this post."
 	 TRM_Grigorij_Shubin_cair_ade:0 "Grigorij Shubin"
 	 Grigorij_Shubin_dead:0 " is incapable of holding this post."
+
+  ################################################################################################################################################################################################
+  ### TRV
+  ################################################################################################################################################################################################
+
+	### Head of Government ###
+	 TRV_R_Sugathan_hog_syn:0 "R. Sugathan"
+	 R_Sugathan_dead:0 " is incapable of holding this post."
+	 TRV_E_Ikkanda_Warrier_hog_sde:0 "E. Ikkanda Warrier"
+	 E_Ikkanda_Warrier_dead:0 " is incapable of holding this post."
+	 TRV_Kavalam_Madhava_Panikkar_hog_sli:0 "Kavalam Madhava Panikkar"
+	 Kavalam_Madhava_Panikkar_dead:0 " is incapable of holding this post."
+	 TRV_Muhammad_Habibullah_hog_sco:0 "Muhammad Habibullah"
+	 Muhammad_Habibullah_dead:0 " is incapable of holding this post."
+	 TRV_R_K_Shanmukham_Chetty_hog_sco:0 "R. K. Shanmukham Chetty"
+	 R_K_Shanmukham_Chetty_dead:0 " is incapable of holding this post."
+
+	### Foreign Minister ###
+	 TRV_Mohammed_Abdul_Rahiman_for_tot:0 "Mohammed Abdul Rahiman"
+	 Mohammed_Abdul_Rahiman_dead:0 " is incapable of holding this post."
+	 TRV_V_S_Subramanya_Iyer_for_sco:0 "V. S. Subramanya Iyer"
+	 V_S_Subramanya_Iyer_dead:0 " is incapable of holding this post."
+
+	### Economy Minister ###
+	 TRV_C_Kesavan_eco_sde:0 "C. Kesavan"
+	 C_Kesavan_dead:0 " is incapable of holding this post."
+	 TRV_Damodaran_Asan_AS_eco_sco:0 "Damodaran Asan A.S"
+	 Damodaran_Asan_AS_dead:0 " is incapable of holding this post."
+	 TRV_Mallapalli_Modayil_Mani_eco_sco:0 "Mallapalli Modayil Mani"
+	 Mallapalli_Modayil_Mani_dead:0 " is incapable of holding this post."
+	 TRV_R_K_Shanmukham_Chetty_eco_sco:0 "R. K. Shanmukham Chetty"
+	 R_K_Shanmukham_Chetty_dead:0 " is incapable of holding this post."
+
+	### Security Minister ###
+	 TRV_Anaparambil_Joseph_John_sec_sde:0 "Anaparambil Joseph John"
+	 Anaparambil_Joseph_John_dead:0 " is incapable of holding this post."
+	 TRV_Sannappa_Parameshwar_Gaonkar_sec_sde:0 "Sannappa Parameshwar Gaonkar"
+	 Sannappa_Parameshwar_Gaonkar_dead:0 " is incapable of holding this post."
+	 TRV_MA_Chacko_sec_sco:0 "M.A. Chacko"
+	 MA_Chacko_dead:0 " is incapable of holding this post."
+
+	### Intelligence Minister ###
+	 TRV_K_Kelappan_int_sde:0 "K. Kelappan"
+	 K_Kelappan_dead:0 " is incapable of holding this post."
+	 TRV_Chandrasekaran_Nair_int_sco:0 "Chandrasekaran Nair"
+	 Chandrasekaran_Nair_dead:0 " is incapable of holding this post."
+	 TRV_P_G_N_Unnithan_int_sco:0 "P. G. N. Unnithan"
+	 P_G_N_Unnithan_dead:0 " is incapable of holding this post."
+
+	### Military High Command ###
+	 TRV_Chempakaraman_Pillai_mhc_syn:0 "Chempakaraman Pillai"
+	 Chempakaraman_Pillai_dead:0 " is incapable of holding this post."
+	 TRV_NRSreenivasan_Iyer_mhc_sco:0 "N.R.Sreenivasan Iyer"
+	 NRSreenivasan_Iyer_dead:0 " is incapable of holding this post."
+
+	### Chief of Army ###
+	 TRV_Chempakaraman_Pillai_carm_syn:0 "Chempakaraman Pillai"
+	 Chempakaraman_Pillai_dead:0 " is incapable of holding this post."
+	 TRV_M_Krishna_Menon_carm_sco:0 "M. Krishna Menon"
+	 M_Krishna_Menon_dead:0 " is incapable of holding this post."
+
+	### Chief of Navy ###
+	 TRV_Sannappa_Parameshwar_Gaonkar_cnav_syn:0 "Sannappa Parameshwar Gaonkar"
+	 Sannappa_Parameshwar_Gaonkar_dead:0 " is incapable of holding this post."
+	 TRV_Aikya_Keralam_Thampuran_cnav_sco:0 "Aikya Keralam Thampuran"
+	 Aikya_Keralam_Thampuran_dead:0 " is incapable of holding this post."
+
+	### Chief of Air Force ###
+	 TRV_P_Krishna_Pillai_cair_syn:0 "P. Krishna Pillai"
+	 P_Krishna_Pillai_dead:0 " is incapable of holding this post."
+	 TRV_Ravi_Varma_cair_sco:0 "Ravi Varma"
+	 Ravi_Varma_dead:0 " is incapable of holding this post."
 
   ################################################################################################################################################################################################
   ### TUA
